Version 1.0.0 (not yet released):
- Changes taken from msmtp:
  - Use a locally modified version of gnulibs sysexit_.h that defines EX_OK to
    0, since the gnulib maintainers apparently won't fix this file.
    Include the sysexits.h header after all other system headers to override 
    previous definitions of EX_OK on systems that use EX_OK for other purposes.
    This is needed on Interix, reported by Ben Collver.

Version 0.8.3:
- gnulib update.
- Expect sorted UIDLS files. This means that files written by versions prior
  to 0.5.0 are not accepted anymore.
- Fixed -d and -P output for "delivery" when maildir is used.
- Changes taken from msmtp:
  - adapted configure.ac for new pkg-config version
  - Use gnulib socklen module for socklen_t.
  - W32: Enable maildir delivery.
  - W32/DJGPP: Use all files/streams in binary mode.
  - W32: Allow %HOME% to override default user configuration directory.
  - W32: Enable getpass and netrc functionality.
  - Do not rely on a failing malloc setting errno in xalloc_die()
  - Shut down a GnuTLS TLS session with GNUTLS_SHUT_WR instead of
    GNUTLS_SHUT_RDWR. This prevents session hangs in certain situations.
    It is safe to do this because we never reuse a connection when TLS was shut
    down. Thanks to Jens Kammler for the problem report!
  - Make the GnuTLS code accept old version 1 CA certificates when verifying
    certificates.
  - Renamed LOCK_(READ|WRITE) to OSENV_LOCK_(READ|WRITE) in os_env.[ch] to avoid
    name clashes with <fcntl.h>

Version 0.8.2:
- gnulib update
- unified all "... aborted" error messages to "operation aborted"
- Updated README. Removed README.gsasl.
- Don't accept empty UIDs or UIDs containing control characters.
- Whitespace fixes, cleanups
- Removed TODO file
- Changes taken from msmtp:
  - Removed the OpenSSL exception note from the license information. This was
    necessary because mpop uses GPL'ed gnulib modules.
  - Avoid system call in net_puts() when there's no data to send